--- a/Project 1/template-3-tier-web-application.yaml
+++ b/Project 1/template-3-tier-web-application.yaml
@@ -15,6 +15,66 @@ Resources:
         - Key: Name
           Value: Application-VPC
 
+  PublicSubnet1:
+    Description: Public Subnet in Availability Zone 1
+    Type: AWS::EC2::Subnet
+    Properties:
+      VpcId: !Ref VirtualPrivateCloud
+      CidrBlock: 172.1.1.0/24
+      MapPublicIpOnLaunch: 'true'
+      AvailabilityZone:
+        Fn::Select:
+          - 0
+          - Fn::GetAZs: ""
+      Tags:
+        - Key: Name
+          Value: Public-Subnet1          
+
+  PublicSubnet2:
+    Description: Public Subnet in Availability Zone 1
+    Type: AWS::EC2::Subnet
+    Properties:
+      VpcId: !Ref VirtualPrivateCloud
+      CidrBlock: 172.1.3.0/24
+      MapPublicIpOnLaunch: 'true'
+      AvailabilityZone:
+        Fn::Select:
+          - 1
+          - Fn::GetAZs: ""
+      Tags:
+        - Key: Name
+          Value: Public-Subnet2          
+
+  PrivateSubnet1:
+    Description: Private Subnet in Availability Zone 1
+    Type: AWS::EC2::Subnet
+    Properties:
+      VpcId: !Ref VirtualPrivateCloud
+      CidrBlock: 172.1.2.0/24
+      MapPublicIpOnLaunch: 'false'
+      AvailabilityZone:
+        Fn::Select:
+          - 0
+          - Fn::GetAZs: ""          
+      Tags:
+        - Key: Name
+          Value: Private-Subnet1
+
+  PrivateSubnet2:
+    Description: Private Subnet in Availability Zone 1
+    Type: AWS::EC2::Subnet
+    Properties:
+      VpcId: !Ref VirtualPrivateCloud
+      CidrBlock: 172.1.4.0/24
+      MapPublicIpOnLaunch: 'false'
+      AvailabilityZone:
+        Fn::Select:
+          - 1
+          - Fn::GetAZs: ""          
+      Tags:
+        - Key: Name
+          Value: Private-Subnet2
+
   InternetGateway:
     Description: Internet Gateway for the VPC
     Type: AWS::EC2::InternetGateway
@@ -43,21 +103,6 @@ Resources:
       DestinationCidrBlock: 0.0.0.0/0
       GatewayId: !Ref InternetGateway
 
-  PublicSubnet1:
-    Description: Public Subnet in Availability Zone 1
-    Type: AWS::EC2::Subnet
-    Properties:
-      VpcId: !Ref VirtualPrivateCloud
-      CidrBlock: 172.1.1.0/24
-      MapPublicIpOnLaunch: 'true'
-      AvailabilityZone:
-        Fn::Select:
-          - 0
-          - Fn::GetAZs: ""
-      Tags:
-        - Key: Name
-          Value: Public-Subnet1          
-
   AssociatePublicRouteTableWithPublicSubnet1:
     Description: Associate InternetRouteTable to PublicSubnet1, so that it becomes a public subnet.
     Type: AWS::EC2::SubnetRouteTableAssociation
@@ -65,21 +110,13 @@ Resources:
       RouteTableId: !Ref InternetRouteTable
       SubnetId: !Ref PublicSubnet1
       
-  PrivateSubnet1:
-    Description: Private Subnet in Availability Zone 1
-    Type: AWS::EC2::Subnet
+  AssociatePublicRouteTableWithPublicSubnet2:
+    Description: Associate InternetRouteTable to PublicSubnet2, so that it becomes a public subnet.
+    Type: AWS::EC2::SubnetRouteTableAssociation
     Properties:
-      VpcId: !Ref VirtualPrivateCloud
-      CidrBlock: 172.1.2.0/24
-      MapPublicIpOnLaunch: 'false'
-      AvailabilityZone:
-        Fn::Select:
-          - 0
-          - Fn::GetAZs: ""          
-      Tags:
-        - Key: Name
-          Value: Private-Subnet1
-
+      RouteTableId: !Ref InternetRouteTable
+      SubnetId: !Ref PublicSubnet2
+      
   WebServer:
     Description: Web-server tier EC2 instance
     Type: 'AWS::EC2::Instance'
