--- a/Project 1/template-3-tier-web-application.yaml
+++ b/Project 1/template-3-tier-web-application.yaml
@@ -7,7 +7,7 @@ Resources:
     Description: The VPC inside which all resources would be created.
     Type: 'AWS::EC2::VPC'
     Properties:
-      CidrBlock: 172.1.0.0/16
+      CidrBlock: !Ref VPCCidrBlock
       EnableDnsSupport: 'true'
       EnableDnsHostnames: 'true'
       InstanceTenancy: default
@@ -20,7 +20,13 @@ Resources:
     Type: AWS::EC2::Subnet
     Properties:
       VpcId: !Ref VirtualPrivateCloud
-      CidrBlock: 172.1.1.0/24
+      CidrBlock: 
+        Fn::Select:
+          - 0
+          - Fn::Cidr:
+            - !Ref VPCCidrBlock
+            - 4
+            - 8 
       MapPublicIpOnLaunch: 'true'
       AvailabilityZone:
         Fn::Select:
@@ -35,7 +41,13 @@ Resources:
     Type: AWS::EC2::Subnet
     Properties:
       VpcId: !Ref VirtualPrivateCloud
-      CidrBlock: 172.1.3.0/24
+      CidrBlock: 
+        Fn::Select:
+          - 1
+          - Fn::Cidr:
+            - !Ref VPCCidrBlock
+            - 4
+            - 8 
       MapPublicIpOnLaunch: 'true'
       AvailabilityZone:
         Fn::Select:
@@ -50,7 +62,13 @@ Resources:
     Type: AWS::EC2::Subnet
     Properties:
       VpcId: !Ref VirtualPrivateCloud
-      CidrBlock: 172.1.2.0/24
+      CidrBlock: 
+        Fn::Select:
+          - 2
+          - Fn::Cidr:
+            - !Ref VPCCidrBlock
+            - 4
+            - 8 
       MapPublicIpOnLaunch: 'false'
       AvailabilityZone:
         Fn::Select:
@@ -65,7 +83,13 @@ Resources:
     Type: AWS::EC2::Subnet
     Properties:
       VpcId: !Ref VirtualPrivateCloud
-      CidrBlock: 172.1.4.0/24
+      CidrBlock: 
+        Fn::Select:
+          - 3
+          - Fn::Cidr:
+            - !Ref VPCCidrBlock
+            - 4
+            - 8 
       MapPublicIpOnLaunch: 'false'
       AvailabilityZone:
         Fn::Select:
@@ -224,6 +248,11 @@ Resources:
 # Define the Input Parameters
 ################################################################################
 Parameters:
+
+  VPCCidrBlock:
+    Description: CIDR Block for the VPC.
+    Type: String
+    Default: "172.1.0.0/16"
 
   KeyName:
     Description: A Key Pair that could be used to access the EC2 instance.
