--- a/Project 1/template-3-tier-web-application.yaml
+++ b/Project 1/template-3-tier-web-application.yaml
@@ -512,3 +512,7 @@ Outputs:
     Description: Endpoint for the RDS instance
     Value: 
       !Join [ ":", [ !GetAtt RDSInstance.Endpoint.Address, !GetAtt RDSInstance.Endpoint.Port ] ]
+
+  BastionHost1PublicIp:
+    Description: Public IP Address of the Bastion Host 1
+    Value: !GetAtt BastionHost1.PublicIp
