Added Output for Application Load Balancer DNSName.

--- a/Project 1/template-3-tier-web-application.yaml
+++ b/Project 1/template-3-tier-web-application.yaml
@@ -533,4 +533,8 @@ Outputs:
 
   BastionHost2PublicIp:
     Description: Public IP Address of the Bastion Host 2
-    Value: !GetAtt BastionHost2.PublicIp    
+    Value: !GetAtt BastionHost2.PublicIp
+
+  ApplicationURL:
+    Description: URL to access the application.
+    Value: !GetAtt ApplicationLoadBalancer.DNSName
