--- a/Project 2/template-ci-cd-pipeline.yaml
+++ b/Project 2/template-ci-cd-pipeline.yaml
@@ -10,6 +10,55 @@ Resources:
       RepositoryDescription: !Ref RepositoryDescription
       RepositoryName: !Ref RepoName
 
+  ServiceRoleForCodeBuild:
+    Description: CodeBuild would need this service role to do its job.
+    Type: AWS::IAM::Role
+    Properties:
+      AssumeRolePolicyDocument: 
+        Version: "2012-10-17"
+        Statement: 
+        - 
+          Effect: "Allow"
+          Principal: 
+            Service: 
+              - "codebuild.amazonaws.com"
+          Action: 
+            - "sts:AssumeRole"
+      Policies:
+        - 
+          PolicyName: "root"
+          PolicyDocument:
+            Version: "2012-10-17"
+            Statement:
+              - 
+                Effect: "Allow"
+                Resource: 
+                  - !Sub arn:aws:logs:${AWS::Region}:${AWS::AccountId}:log-group:/aws/codebuild/${BuildProjectName}",
+                  - !Sub arn:aws:logs:${AWS::Region}:${AWS::AccountId}:log-group:/aws/codebuild/${BuildProjectName}:*"
+                Action:
+                - logs:CreateLogGroup
+                - logs:CreateLogStream
+                - logs:PutLogEvents
+
+  CodeBuildProject:
+    Description: AWS CodeBuild project to build the Source Code
+    Type: AWS::CodeBuild::Project
+    Properties:
+      Name: !Ref BuildProjectName
+      Description: !Ref BuildProjectDescription
+      Artifacts: 
+        Type: CODEPIPELINE
+      Environment:
+        ComputeType: BUILD_GENERAL1_SMALL
+        Image: aws/codebuild/java:openjdk-8
+        Type: LINUX_CONTAINER
+      ServiceRole: !GetAtt ServiceRoleForCodeBuild.Arn
+      Source: 
+        Type: CODEPIPELINE
+      Tags:
+      - Key: Name
+        Value: !Ref BuildProjectName
+
   VirtualPrivateCloud:
     Description: The VPC in which the Jenkins Server would be created.
     Type: 'AWS::EC2::VPC'
@@ -150,6 +199,11 @@ Metadata:
           - RepoName
           - RepositoryDescription
 
+      - Label:
+          default: "Code Build"
+        Parameters:
+          - BuildProjectName
+          - BuildProjectDescription
 
 Parameters:
 
@@ -195,6 +249,19 @@ Parameters:
     
   RepositoryDescription:
     Description: A short description of the repository within 200 characters.
+    Type: String
+    MaxLength: 200
+    ConstraintDescription: Must be less than 200 characters in length. 
+
+  BuildProjectName:
+    Description: Name of the build project
+    Type: String
+    MinLength: 3
+    MaxLength: 40
+    ConstraintDescription: Must be between 3 and 40 characters in length. 
+
+  BuildProjectDescription:
+    Description: A short description of the build project, within 200 characters.
     Type: String
     MaxLength: 200
     ConstraintDescription: Must be less than 200 characters in length. 
