--- a/Project 2/template-ci-cd-pipeline.yaml
+++ b/Project 2/template-ci-cd-pipeline.yaml
@@ -33,12 +33,30 @@ Resources:
               - 
                 Effect: "Allow"
                 Resource: 
-                  - !Sub arn:aws:logs:${AWS::Region}:${AWS::AccountId}:log-group:/aws/codebuild/${BuildProjectName}",
-                  - !Sub arn:aws:logs:${AWS::Region}:${AWS::AccountId}:log-group:/aws/codebuild/${BuildProjectName}:*"
+                  - !Sub arn:aws:logs:${AWS::Region}:${AWS::AccountId}:log-group:/aws/codebuild/${BuildProjectName}
+                  - !Sub arn:aws:logs:${AWS::Region}:${AWS::AccountId}:log-group:/aws/codebuild/${BuildProjectName}:*
                 Action:
                 - logs:CreateLogGroup
                 - logs:CreateLogStream
                 - logs:PutLogEvents
+
+              - 
+                Effect: "Allow"
+                Resource: 
+                  - !Sub arn:aws:s3:::codepipeline-${AWS::Region}-*
+                  
+                Action:
+                - s3:PutObject
+                - s3:GetObject
+                - s3:GetObjectVersion
+
+              - 
+                Effect: "Allow"
+                Resource: 
+                  - !Sub arn:aws:codecommit:${AWS::Region}:${AWS::AccountId}:${BuildProjectName}
+                  
+                Action:
+                - codecommit:GitPull
 
   CodeBuildProject:
     Description: AWS CodeBuild project to build the Source Code
@@ -115,6 +133,7 @@ Resources:
   RouteToIGW:
     Description: Defines a route to the internet in InternetRouteTable.
     Type: AWS::EC2::Route
+    DependsOn: AttachInternetGateway
     Properties:
       RouteTableId: !Ref InternetRouteTable
       DestinationCidrBlock: 0.0.0.0/0
