--- a/Project 1/template-3-tier-web-application.yaml
+++ b/Project 1/template-3-tier-web-application.yaml
@@ -177,6 +177,7 @@ Resources:
   RouteToIGW:
     Description: Defines a route to the internet in InternetRouteTable.
     Type: AWS::EC2::Route
+    DependsOn: AttachInternetGateway
     Properties:
       RouteTableId: !Ref InternetRouteTable
       DestinationCidrBlock: 0.0.0.0/0
