Added a Name property to the CodePipeline

--- a/Project 2/template-ci-cd-pipeline.yaml
+++ b/Project 2/template-ci-cd-pipeline.yaml
@@ -231,6 +231,7 @@ Resources:
     Description: AWS CodePipeline
     Type: AWS::CodePipeline::Pipeline
     Properties:
+      Name: !Ref PipelineName
       ArtifactStore:
         Type: S3
         Location: !Ref CodePipelineArtifactStore
@@ -489,6 +490,11 @@ Metadata:
     ParameterGroups:
 
       - Label:
+          default: "Pipeline"
+        Parameters:
+          - PipelineName
+
+      - Label:
           default: "Jenkins Server"
         Parameters:
           - VPCCidrBlock
@@ -524,6 +530,14 @@ Metadata:
           - DeploymentKeyValue
 
 Parameters:
+
+  PipelineName:
+    Description: A name for your Pipeline.
+    Type: String
+    Default: CodePipelineDemo
+    MinLength: 3
+    MaxLength: 40
+    ConstraintDescription: Must be between 3 and 40 characters in length. 
 
   VPCCidrBlock:
     Description: VPC CIDR block for the VPC to be created.
